# codecrafters-shell-rust

./: Cargo.toml  README.md  a
src/: command.rs  complete.rs  completer.rs  error.rs  execute.rs  io.rs  lib.rs  main.rs  parser.rs  redirect.rs  shell.rs  token.rs  utils.rs
src/command/: builtin.rs  cmd.rs  exec_file.rs  executable.rs  executable_file.rs  execute.rs  io.rs  mod.rs  parse.rs  parse_cmd.rs  plain.rs
src/command/parse/: command.rs  mod.rs  redirect.rs
src/parse/: command.rs  mod.rs  redirect.rs
src/parser/: completer.rs  key.rs  quotes.rs  raw.rs  token.rs
src/token/: raw.rs
tests/: test.rs
