[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
glob = "0.3.2"
rustyline = { version = "15.0.0", features = ["derive"] }
shellexpand = "3.1.1"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"
thiserror = "1.0.38"                             # error handling
winnow = "0.7.9"

[dev-dependencies]
assert_cmd = "2.0.17"
rexpect = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.19.1"
